Bug 1116431 - mobileconnection.iccId should be null instead of an empty string when no sim. r=edgar